--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,10 @@
     "axios": "^1.7.2",
     "dompurify": "^3.1.6",
     "next": "14.2.4",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "sockjs-client": "^1.6.1",
     "swiper": "^11.1.5"
   },
