--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "swiper": "^11.1.5"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "^18",
