--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
@@ -20,17 +22,30 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/rrule": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@mui/material": "^5.16.4",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.11.0",
     "@stomp/stompjs": "^7.0.0",
     "@types/sockjs-client": "^1.5.4",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "dompurify": "^3.1.6",
     "next": "14.2.4",
     "quill": "^2.0.2",
     "react": "^18",
+    "react-clock": "^5.0.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
+    "react-ios-time-picker": "^0.2.2",
     "react-quill": "^2.0.0",
+    "react-tailwindcss-datepicker": "^1.6.6",
+    "react-time-picker": "^7.0.0",
     "sockjs-client": "^1.6.1",
-    "swiper": "^11.1.5"
+    "styled-components": "^6.1.12",
+    "swiper": "^11.1.5",
+    "tailwind-datepicker-react": "^1.4.3",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
