--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@types/sockjs-client": "^1.5.4",
     "axios": "^1.7.2",
+    "browser-image-compression": "^2.0.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "dompurify": "^3.1.6",
