lesson modify page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,12 +32,12 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "dompurify": "^3.1.6",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "quill": "^2.0.2",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-clock": "^5.0.0",
     "react-datepicker": "^7.3.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-ios-time-picker": "^0.2.2",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.25.1",
