--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,13 +2,12 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: 2ndsprout
+    username: 2ndsprout@gmail.com
     password: uirmupfgwyncdpvh
     properties:
       mail:
         smtp:
           auth: true
-          timeout: 5000
           starttls:
             enable: true
   web:
@@ -16,7 +15,7 @@ spring:
       static-locations:
        - classpath:/static/
        - file:C:/web/apt_project
-       - file:/home/ubuntu/apt
+       - file:/home/ubuntu/apt/data
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
