editor comp fix

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,53 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.11.1",
     "@stomp/stompjs": "^7.0.0",
+    "@tailwindcss/typography": "^0.5.14",
+    "@tiptap/extension-blockquote": "^2.6.4",
+    "@tiptap/extension-bold": "^2.6.4",
+    "@tiptap/extension-bullet-list": "^2.6.4",
+    "@tiptap/extension-code": "^2.6.4",
+    "@tiptap/extension-code-block": "^2.6.4",
+    "@tiptap/extension-code-block-lowlight": "^2.6.4",
+    "@tiptap/extension-color": "^2.6.4",
+    "@tiptap/extension-document": "^2.6.4",
+    "@tiptap/extension-floating-menu": "^2.6.4",
+    "@tiptap/extension-hard-break": "^2.6.4",
+    "@tiptap/extension-heading": "^2.6.4",
+    "@tiptap/extension-highlight": "^2.6.4",
+    "@tiptap/extension-horizontal-rule": "^2.6.4",
+    "@tiptap/extension-image": "^2.6.4",
+    "@tiptap/extension-italic": "^2.6.4",
+    "@tiptap/extension-link": "^2.6.4",
+    "@tiptap/extension-list-item": "^2.6.4",
+    "@tiptap/extension-mention": "^2.6.4",
+    "@tiptap/extension-ordered-list": "^2.6.4",
+    "@tiptap/extension-paragraph": "^2.6.4",
+    "@tiptap/extension-strike": "^2.6.4",
+    "@tiptap/extension-subscript": "^2.6.4",
+    "@tiptap/extension-superscript": "^2.6.4",
+    "@tiptap/extension-table": "^2.6.4",
+    "@tiptap/extension-table-cell": "^2.6.4",
+    "@tiptap/extension-table-header": "^2.6.4",
+    "@tiptap/extension-table-row": "^2.6.4",
+    "@tiptap/extension-task-item": "^2.6.4",
+    "@tiptap/extension-task-list": "^2.6.4",
+    "@tiptap/extension-text": "^2.6.4",
+    "@tiptap/extension-text-align": "^2.6.4",
+    "@tiptap/extension-text-style": "^2.6.4",
+    "@tiptap/extension-typography": "^2.6.4",
+    "@tiptap/extension-underline": "^2.6.4",
+    "@tiptap/extension-youtube": "^2.6.4",
+    "@tiptap/pm": "^2.6.4",
+    "@tiptap/react": "^2.6.4",
+    "@tiptap/starter-kit": "^2.6.4",
     "@types/sockjs-client": "^1.5.4",
     "axios": "^1.7.3",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "dompurify": "^3.1.6",
+    "lowlight": "^3.1.0",
+    "lucide-react": "^0.428.0",
     "next": "^14.2.5",
     "quill": "^2.0.2",
     "react": "^18.3.1",
@@ -47,6 +88,7 @@
     "styled-components": "^6.1.12",
     "swiper": "^11.1.5",
     "tailwind-datepicker-react": "^1.4.3",
+    "tiptap-extension-resize-image": "^1.1.8",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
@@ -54,6 +96,7 @@
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
